# uart_test_task

./: CMakeLists.txt  README.md  cp_echo_test.c  device_tools.c  device_tools.h  modes.c  modes.h
